--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,3 +11,18 @@
 // Your CSS partials
 @import "components/index";
 @import "pages/index";
+
+body {
+  background-color: #f4ebe0;
+}
+
+a {
+  text-decoration: none !important;
+  color: black !important;
+  padding: 5px !important;
+  opacity: 0.7 !important;
+}
+
+a:hover {
+  opacity: 1 !important;
+}
