--- a/app/views/pages/atelier.html.erb
+++ b/app/views/pages/atelier.html.erb
@@ -13,5 +13,6 @@
     <%= image_tag "PHOTOS ATELIER/IMG_1291.JPG" %>
     <%= image_tag "PHOTOS ATELIER/IMG_1284.JPG" %>
     <%= image_tag "PHOTOS ATELIER/IMG_1294.JPG" %>
+    <%= image_tag "PHOTOS ATELIER/IMG_1294.JPG" %>
   </div>
 </div>
