fix bugs heroku

--- a/app/views/pages/prestations.html.erb
+++ b/app/views/pages/prestations.html.erb
@@ -10,7 +10,7 @@
 
   <div class="prestation conservation">
     <div class="conservation-img">
-      <%= image_tag "presta", alt: "alttext" %>
+      <%= image_tag "presta.jpg", alt: "alttext" %>
     </div>
     <div class="conservation_img_content_global">
       <div class="conservation-img-content">
@@ -56,7 +56,7 @@
       </div>
     </div>
     <div class="esthetique-img">
-      <%= image_tag "presta_1", alt: "alttext" %>
+      <%= image_tag "presta_1.jpg", alt: "alttext" %>
     </div>
   </div>
 
@@ -64,7 +64,7 @@
 
   <div class="prestation preventive">
     <div class="preventive-img">
-      <%= image_tag "presta_2", alt: "alttext" %>
+      <%= image_tag "presta_2.jpg", alt: "alttext" %>
     </div>
     <div class="preventive_global">
       <div class="preventive-img-content">
