--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -20,7 +20,7 @@
   </div>
   <div class="form-group">
     <label for="exampleInputMessage">Message</label>
-    <textarea class="form-control" id="exampleInputMessage" rows="3" placeholder="Bonjour, j'ai un tableau de Rembrandt à faire restaurer. Seriez-vous disponible pour un rendez-vous ?"></textarea>
+    <textarea class="form-control" id="exampleInputMessage" rows="3" placeholder="Bonjour, j'ai un tableau de Rembrandt à faire restaurer. Seriez-vous disponible pour un rendez-vous ? Merci :)"></textarea>
   </div>
   <div class="form-group">
     <label for="exampleFormControlPhoto">Photos si possible</label>
