--- a/app/views/pages/galerie.html.erb
+++ b/app/views/pages/galerie.html.erb
@@ -2,19 +2,19 @@
 
 <!-- <div class="cards"> -->
 
-<div class="galerie depoussierage">
+<!-- <div class="galerie depoussierage">
   <h3>Dépoussiérage</h3>
   <div class="depoussierage_img">
     <div class="card-category">
-      <%= image_tag "photo_ALRDN/depoussierage/eponge_bleue.jpg" %>
-      <%= image_tag "photo_ALRDN/depoussierage/IMG_9509.JPG" %>
-      <!-- <figcaption>Caption goes here</figcaption> -->
-    </div>
+      <#%= image_tag "photo_ALRDN/depoussierage/eponge_bleue.jpg" %>
+      <#%= image_tag "photo_ALRDN/depoussierage/IMG_9509.JPG" %>
+      <#!-- <figcaption>Caption goes here</figcaption> -->
+<!--     </div>
   </div>
-</div>
+</div> -->
 
 <div class="galerie refixage">
-  <h3>Refixage</h3>
+  <h3>Refixage de la couche picturale</h3>
   <div class="refixage_img">
     <div class="card-category">
       <%= image_tag "photo_ALRDN/REFIXAGE/IMG_7878.JPG" %>
@@ -24,8 +24,10 @@
   </div>
 </div>
 
+<div class="trait_dessus_presta"></div>
+
 <div class="galerie reprise_dechirure">
-  <h3>Reprise de déchirures</h3>
+  <h3>Reprise de déchirures, fil à fil, incrustations et retouche</h3>
   <div class="reprise_dechirure_img">
     <div class="card-category">
       <%= image_tag "photo_ALRDN/REPRISE_DECHIRURES/IMG_0542.JPG" %>
@@ -37,18 +39,22 @@
   </div>
 </div>
 
+<div class="trait_dessus_presta"></div>
+
 <div class="galerie mastics">
-  <h3>Mastics de fond et de forme</h3>
+  <h3>Mastics de fond, de forme, retouches</h3>
   <div class="mastic_img">
     <div class="card-category">
-      <%= image_tag "photo_ALRDN/MASTICS/IMG_1372.JPG" %>
-      <%= image_tag "photo_ALRDN/MASTICS/IMG_4482.JPG" %>
       <%= image_tag "photo_ALRDN/MASTICS/IMG_1252.JPG" %>
       <%= image_tag "photo_ALRDN/MASTICS/IMG_1493.JPG" %>
       <%= image_tag "photo_ALRDN/MASTICS/IMG_1690.JPG" %>
+      <%= image_tag "photo_ALRDN/MASTICS/IMG_1372.JPG" %>
+      <%= image_tag "photo_ALRDN/MASTICS/IMG_4482.JPG" %>
     </div>
   </div>
 </div>
+
+<div class="trait_dessus_presta"></div>
 
 <div class="galerie nettoyage">
   <h3>Nettoyage</h3>
@@ -61,8 +67,10 @@
   </div>
 </div>
 
+<div class="trait_dessus_presta"></div>
+
 <div class="galerie retouche">
-  <h3>Retouches</h3>
+  <h3>Retouche, réintégration chromatique</h3>
   <div class="retouche_img">
     <div class="card-category">
       <%= image_tag "photo_ALRDN/RETOUCHES/IMG_1239.JPG" %>
@@ -71,14 +79,16 @@
   </div>
 </div>
 
+<div class="trait_dessus_presta"></div>
+
 <div class="galerie avant_apres">
   <h3>Avant / Après</h3>
   <div class="avant_apres_img">
     <div class="card-category">
-      <%= image_tag "photo_ALRDN/AVANT:APRES/IMG_0748.JPG" %>
-      <%= image_tag "photo_ALRDN/AVANT:APRES/IMG_0854.JPG" %>
-      <%= image_tag "photo_ALRDN/AVANT:APRES/Paysage_avant.jpg" %>
-      <%= image_tag "photo_ALRDN/AVANT:APRES/Paysage_apres.jpg" %>
+      <%= image_tag "photo_ALRDN/AVANT:APRES/IMG_0747.png" %>
+      <%= image_tag "photo_ALRDN/AVANT:APRES/IMG_0854.JPG" %><br>
+      <%= image_tag "photo_ALRDN/AVANT:APRES/maison_avant.jpeg" %>
+      <%= image_tag "photo_ALRDN/AVANT:APRES/maison_apres.jpeg" %>
     </div>
   </div>
 </div>
