--- a/app/assets/stylesheets/pages/_galerie.scss
+++ b/app/assets/stylesheets/pages/_galerie.scss
@@ -13,7 +13,7 @@
   img {
     width: 100%;
     height: 250px;
-    object-fit: contain;
+    object-fit: cover;
   }
 }
 
@@ -23,7 +23,6 @@
   background-color: rgba(120, 120, 120, 0.1);
   padding: 12px;
   border-radius: 5px;
-  margin-bottom: 12px;
   h3 {
     margin-bottom: 18px;
   }
