--- a/app/views/pages/galerie.html.erb
+++ b/app/views/pages/galerie.html.erb
@@ -87,8 +87,8 @@
     <div class="card-category">
       <%= image_tag "photo_ALRDN/AVANT:APRES/IMG_0747.png" %>
       <%= image_tag "photo_ALRDN/AVANT:APRES/IMG_0854.JPG" %><br>
-      <%= image_tag "photo_ALRDN/AVANT:APRES/Maison_avant.jpeg" %>
-      <%= image_tag "photo_ALRDN/AVANT:APRES/Maison_apres.jpeg" %>
+      <%= image_tag "photo_ALRDN/AVANT:APRES/IMG_1902.JPG" %>
+      <%= image_tag "photo_ALRDN/AVANT:APRES/IMG_1996.JPG" %>
     </div>
   </div>
 </div>
