--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,8 @@
     <meta property="og:description" content="<%= meta_description %>" />
     <meta property="og:site_name" content="<%= meta_title %>" />
 
+    <%= favicon_link_tag %>
+
     <!-- Twitter Card data -->
 <!--     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="<  %= DEFAULT_META["twitter_account"] %>">
