--- a/app/views/pages/accueil.html.erb
+++ b/app/views/pages/accueil.html.erb
@@ -17,7 +17,7 @@
   <div class="home-footer">
     Me contacter: <br>
     Catherine Bollack <br>
-    Mail: catherine.nb@wanadoo.fr <br>
+    Mail: contact@atelier-la-ronde-de-nuit.com <br>
     Tel: +33 6 63 00 74 35 <br>
     <br>
     Réalisation de devis gratuit - sur rendez-vous
