--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,6 +1,6 @@
 <%= render "shared/navbar" %>
 
-<form class="container">
+<!-- <form class="container" action="https://formspree.io/f/xbjqawlz" method="POST">
   <div class="form-group">
     <label for="exampleInputName">Nom</label>
     <input type="name" class="form-control" id="exampleInputName" aria-describedby="emailHelp" placeholder="Bollack">
@@ -27,5 +27,73 @@
     <input type="file" class="form-control-file" id="exampleFormControlPhoto">
   </div>
   <button type="submit" class="btn btn-primary">Envoyer</button>
+</form> -->
+
+
+<form id="contact-form" action="https://formspree.io/f/xbjqawlz" method="POST">
+
+  <!-- <div class="messages"></div> -->
+
+  <div class="controls">
+
+    <div class="row">
+      <div class="col-md-6">
+        <div class="form-group">
+          <label for="form_name">Prénom *</label>
+          <input id="form_name" type="text" name="name" class="form-control" placeholder="Paul *" required="required" data-error="Le prénom est requis.">
+          <div class="help-block with-errors"></div>
+        </div>
+      </div>
+      <div class="col-md-6">
+          <div class="form-group">
+            <label for="form_lastname">Nom *</label>
+            <input id="form_lastname" type="text" name="surname" class="form-control" placeholder="Dupont *" required="required" data-error="Le nom est requis.">
+            <div class="help-block with-errors"></div>
+          </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-6">
+          <div class="form-group">
+            <label for="form_email">Email *</label>
+            <input id="form_email" type="email" name="email" class="form-control" placeholder="paul.dupont@gmail.com *" required="required" data-error="Un email valide est requis">
+            <div class="help-block with-errors"></div>
+          </div>
+      </div>
+
+      <div class="col-md-6">
+        <div class="form-group">
+          <label for="form_email">Téléphone</label>
+          <input id="form_email" type="telephone" name="telephone" class="form-control">
+          <div class="help-block with-errors"></div>
+        </div>
+      </div>
+
+    </div>
+
+    <div class="row">
+      <div class="col-md-12">
+        <div class="form-group">
+          <label for="form_message">Message *</label>
+          <textarea id="form_message" name="message" class="form-control" placeholder="Votre message *" rows="4" required="required" data-error="Veuillez nous laisser un message."></textarea>
+          <div class="help-block with-errors"></div>
+        </div>
+      </div>
+
+      <div class="col-md-12">
+        <input type="submit" class="btn btn-primary btn-send" value="Envoyer">
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-12">
+        <p class="text-muted">
+          <strong>*</strong> Ces champs sont obligatoires.
+        </p>
+      </div>
+    </div>
+  </div>
+
+  <div id="status"></div>
+
 </form>
 
